Fixed bug for can not showing survey stats dialog

--- a/src/covid19/static/css/survey.css
+++ b/src/covid19/static/css/survey.css
@@ -440,7 +440,7 @@
 }
 
 .stats-content-container {
-    width: 60em;
+    width: 70em;
     padding: 1.6em;
     max-height: 80%;
     display: flex;
